<resources>
    <string name="app_name">BazaarKari</string>
    <string name="product_name">Product Name</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="textview">TextView</string>
    <string name="bdt_200">BDT-200</string>
    <string name="loading_details">Loading Details…</string>
    <string name="todo">TODO</string>
    <string name="text_view">Text View</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="subtotal">Subtotal</string>
    <string name="without_taxes">(without taxes)</string>
    <string name="bdt_0_0">BDT 0.0</string>
    <string name="cost_details">Cost Details</string>
    <string name="tax">Tax</string>
    <string name="_0">0%</string>
    <string name="total">Total</string>
    <string name="information">Information</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="date_shipping">Date Shipping</string>
    <string name="additional_comments">Additional Comments</string>
    <string name="product_order_list">Product Order List</string>
    <string name="process_checkout">Process Checkout</string>
    <string name="continue2">Continue</string>
    <string name="dash">-</string>
    <string name="one">1</string>
    <string name="plus">+</string>
    <string name="taxs">7.5%</string>
</resources>