<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".activities.ProductDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/taskbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/_10sdp">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/backbutton"
            android:elevation="@dimen/_5sdp"
            app:tint="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/_5sdp"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/productNameTop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_5sdp"
            android:gravity="center"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/product_name"
            android:textColor="@color/background"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/backBtn"
            app:layout_constraintEnd_toStartOf="@+id/addToCartIcon"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/addToCartIcon"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:elevation="@dimen/_5sdp"
            android:src="@drawable/cart"
            app:tint="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/todo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/addToCartBtn"
        app:layout_constraintTop_toBottomOf="@+id/taskbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/productImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_300sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/productName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/product_name"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/secondary_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/product_name"
                android:textSize="@dimen/_13sdp"
                android:textColor="#535353"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:lineHeight="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:text="@string/loading_details"
                android:textSize="@dimen/_11sdp"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/addToCartBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:elevation="@dimen/_5sdp"
        android:text="@string/add_to_cart"
        android:textColor="@color/background"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:backgroundTint="@color/primary"
        app:cornerRadius="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>